<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RHQpocket</string>
    <string name="loading">Loading …</string>
    <string name="not_logged_in">Not logged in</string>
  <string name="app_description">Provides an Android client to RHQ</string>
  <string name="unset">Unset</string>
  <string name="set">Set</string>
  <string name="invalid">Invalid</string>
  <string name="some_chart_hint">Some chart ..</string>
  <string name="edit_schedule">Edit schedule</string>
  <string name="pick_resource">Pick resource</string>
  <string name="preferences">Preferences</string>
  <string name="name">Name</string>
  <string name="interval_sec">Interval (sec)</string>
  <string name="collection_interval_sec">Collection Interval (sec)</string>
  <string name="enabled">Enabled</string>
  <string name="update">Update!</string>
  <string name="info_about_schedule">Info about the schedule</string>
  <string name="cancel">Cancel</string>
  <string name="min">Min</string>
  <string name="avg">Avg</string>
  <string name="max">Max</string>
  <string name="last">Last</string>
  <string name="select_metric_first">Please select a metric first</string>
  <string name="pick_display_range">Pick display range</string>
  <string name="Minutes">Minutes</string>
  <string name="Hours">Hours</string>
  <string name="Days">Days</string>
  <string name="Weeks">Weeks</string>
  <string name="last_duration">( last %1$s %2$s) </string>
  <string name="Phone">Phone</string>
  <string name="Email">Email</string>
  <string name="Name">Name</string>
  <string name="Login">Login</string>
  <string name="First_name">First name</string>
  <string name="Last_name">Last name</string>
  <string name="number_of_alerts">Alerts (%d)</string>
  <string name="Medium">Medium</string>
  <string name="ack">Ack?</string>
  <string name="Id">Id</string>
  <string name="Description">Description</string>
  <string name="FireDate">Fire date</string>
  <string name="Priority">Priority</string>
  <string name="by">by</string>
  <string name="DefEnabled">Definition\nEnabled</string>
  <string name="Disable">Disable</string>
  <string name="Enable">Enable</string>
  <string name="ack_alert">Acknowledge Alert</string>
  <string name="delete_alert">Delete Alert</string>
  <string name="Description_not_provided">There is no description provided by the server</string>
  <string name="can_not_connect_to_server">Can not connect to server (%s). Are the address and credentials ok?</string>
  <string name="Favorites">Favorites</string>
  <string name="Metrics">Metrics</string>
  <string name="Alerts">Alerts</string>
  <string name="RemoveFavorite">Remove from Favorites</string>
  <string name="Plugin">Plugin</string>
  <string name="Resource_id">Resource id</string>
  <string name="Ancestry">Ancestry</string>
  <string name="ResourceType">Resource Type</string>
  <string name="Availability">Availability</string>
  <string name="Run_operation">Run operation</string>
  <string name="List_alerts">List alerts</string>
  <string name="Show_metrics">Show metrics</string>
  <string name="Value">Value</string>
  <string name="OperationHistories">Operation Hist.</string>
  <string name="SuccessfullyDeleted">Deleted successfully</string>
  <string name="DeleteFailed">Delete failed:</string>
  <string name="DeleteItem">Delete item</string>
  <string name="Delete">Delete</string>
  <string name="Status">Status</string>
  <string name="Errors">Errors</string>
  <string name="Back">Back</string>
  <string name="Pick">Pick</string>
  <string name="Check">Check</string>
  <string name="Resources">Resources</string>
  <string name="Groups">Groups</string>
  <string name="AddFavorite">Add to favorites</string>
  <string name="Category">Category</string>
  <string name="Recursive">Recursive</string>
  <string name="DynaGroup">DynaGroup</string>
  <string name="Explicit_resources">Explicit resources</string>
  <string name="Implicit_resources">Implicit resources</string>
  <string name="no_data_available">No data available</string>
  <string name="provide_parameters">Provide parameters if needed</string>
  <string name="psss">%1$d Platforms, %2$d Servers, %3$d Services , %4$d Metrics/min</string>
</resources>
