<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:id="@+id/progress_thing"
        android:actionLayout="@layout/progress_thingy"
        android:showAsAction="always"/>


  <item android:title="@string/preferences"
        android:id="@+id/preferences"
        android:icon="@drawable/ic_menu_preferences"
      />

  <item android:title="@string/RemoveFavorite"
        android:id="@+id/remove_from_favorites"
        />

  <item android:title="@string/Show_metrics"
        android:id="@+id/show_metrics"
        />

  <item android:title="@string/List_alerts"
        android:id="@+id/list_alerts"
      />

  <item android:id="@+id/schedule_ops"
        android:title="@string/Run_operation"
        />

  <item android:id="@+id/operation_history"
        android:title="@string/OperationHistories"
        />
</menu>