<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:id="@+id/progress_thing"
        android:actionLayout="@layout/progress_thingy"
        android:showAsAction="always"/>

  <item
        android:actionLayout="@layout/chart_table_switch"
        android:showAsAction="always"
        />

    <item android:title="@string/preferences"
          android:id="@+id/preferences"
          android:icon="@drawable/ic_menu_preferences"
          />
    <item android:title="@string/pick_resource"
          android:id="@+id/pick_resource"
          android:showAsAction="always"
        />
  <item android:title="@string/edit_schedule"
        android:id="@+id/edit_schedule"
        />
  <item android:title="@string/pick_display_range"
        android:id="@+id/pick_display_range"
        />

  <!-- TODO move to a better place -->
  <item android:title="Add to favorites"
        android:id="@+id/add_to_favorites"
        />
</menu>