<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:gravity="center"
    >

  <Button style="@style/wrap_content"
            android:id="@+id/overview_alert_count"
            android:onClick="listAlerts"
            android:drawableLeft="@drawable/flag_blue24"
            android:text="@string/Alerts"
            />


  <Button style="@style/wrap_content"
          android:text="@string/Metrics"
          android:drawableLeft="@drawable/monitor24"
          android:onClick="showMetrics"/>

  <Button style="@style/wrap_content"
               android:onClick="showFavorites"
               android:drawableLeft="@drawable/favorite24selected"
               android:contentDescription="@string/Favorites"
               android:text="@string/Favorites"
               />


</LinearLayout>